[gd_scene load_steps=4 format=3 uid="uid://bslpskjy61i7g"]

[ext_resource type="Script" uid="uid://ucfkjeqcqjc2" path="res://scripts/score_screen.gd" id="1_j2y2s"]
[ext_resource type="FontFile" uid="uid://dxrh1j5ifkbw7" path="res://assets/fonts/RobloxFont-Regular.ttf" id="1_q4r51"]

[sub_resource type="LabelSettings" id="LabelSettings_j2y2s"]
font = ExtResource("1_q4r51")
font_size = 56

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j2y2s")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.676664, 0.309723, 0.669891, 1)

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 30.0
offset_right = 317.0
offset_bottom = 81.0
text = "Total score:"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="Score2" type="Label" parent="."]
layout_mode = 0
offset_left = 534.0
offset_top = 30.0
offset_right = 778.0
offset_bottom = 81.0
text = "0"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="KillsMelee" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 120.0
offset_right = 452.0
offset_bottom = 171.0
text = "Melee bots killed:"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="KillsMelee2" type="Label" parent="."]
layout_mode = 0
offset_left = 534.0
offset_top = 120.0
offset_right = 894.0
offset_bottom = 171.0
text = "0"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="KillsRanged" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 210.0
offset_right = 498.0
offset_bottom = 261.0
text = "Ranged bots killed:"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="KillsRanged2" type="Label" parent="."]
layout_mode = 0
offset_left = 534.0
offset_top = 210.0
offset_right = 933.0
offset_bottom = 261.0
text = "0"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="KillsBoss" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 300.0
offset_right = 432.0
offset_bottom = 351.0
text = "Bosses killed:"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="KillsBoss2" type="Label" parent="."]
layout_mode = 0
offset_left = 534.0
offset_top = 300.0
offset_right = 933.0
offset_bottom = 351.0
text = "0"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="TotalTime" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 390.0
offset_right = 432.0
offset_bottom = 441.0
text = "Total time:"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="TotalTime2" type="Label" parent="."]
layout_mode = 0
offset_left = 534.0
offset_top = 390.0
offset_right = 933.0
offset_bottom = 441.0
text = "0"
label_settings = SubResource("LabelSettings_j2y2s")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(515, -2)
points = PackedVector2Array(0, 0, 0, 453)
default_color = Color(0, 0, 0, 0.784314)

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2(755, -2)
points = PackedVector2Array(0, 0, 0, 453)
default_color = Color(0, 0, 0, 0.784314)

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2(0, 86)
points = PackedVector2Array(0, 370, 760, 370)
default_color = Color(0, 0, 0, 0.784314)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 150.0
offset_right = 1049.0
offset_bottom = 225.0
text = "GLOBAL RANKLIST AND HOW
THE PLAYER COMPARES
WHICH PLACE HE IS"

[node name="ReturnToMenuBtn" type="Button" parent="."]
modulate = Color(0.919307, 0.339452, 0.540438, 1)
layout_mode = 0
offset_left = 109.0
offset_top = 531.0
offset_right = 506.0
offset_bottom = 582.0
theme_override_fonts/font = ExtResource("1_q4r51")
theme_override_font_sizes/font_size = 48
text = "RETURN TO MENU"

[node name="CloseGameBtn" type="Button" parent="."]
modulate = Color(0.919307, 0.339452, 0.540438, 1)
layout_mode = 0
offset_left = 651.0
offset_top = 531.0
offset_right = 1048.0
offset_bottom = 582.0
theme_override_fonts/font = ExtResource("1_q4r51")
theme_override_font_sizes/font_size = 48
text = "CLOSE GAME"

[connection signal="pressed" from="ReturnToMenuBtn" to="." method="_on_return_to_menu_btn_pressed"]
[connection signal="pressed" from="CloseGameBtn" to="." method="_on_close_game_btn_pressed"]
